<resources>
    <string name="app_name">Mzizi School App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="board_bus">Board Bus</string>
    <string name="alight_bus">Alight Bus</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage.</string>
    <string name="barcode_header">Click on &quot;Send Data&quot;  to  send data</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="successful_login">Sign Up successful</string>
    <string name="failed_login">Please check your internet connection! Try again</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="start_trip_journey">Start Trip Journey</string>
    <string name="end_trip_journey">End Trip Journey</string>
    <string name="start_trip_instructions">Selecting &quot;Start Trip Journey&quot;, will allow to track the bus from Departure time to Arrival time. This process is repeated on your journey back to school.</string>
    <string name="end_trip_instructions">Selecting &quot;End Trip Journey&quot; will stop gps tracking of the bus.</string>
    <string name="how_to_use_app">Its advisable to leave this screen on until you arrive at your destination.</string>
    <string name="inform_for_notification">Please check the notification sent to you&#8230;after tapping on Start Trip Journey</string>
    <string name="offence_text">Symbolically abused Mr. Newton the Headteacher Primary section on 26th October 2018 while the said teacher was addressing closing assembly.</string>
    <string name="penaulty_text">The misbehaviour should attract expulsion as the Student had been pardoned on various indiscipline cases before.</string>
    <string name="leave_q_1">I need help on how to apply for leave.</string>
    <string name="class_attendance_q_1">I need help on how to mark the class attendance.</string>
    <string name="fuel_consumption_q_1">I need help on how to record fuel consumption when fueling the vehicle at the Petrol Station.</string>
    <string name="academic_performance_q_1">I need help on how to enquire academic performance history of a specific student.</string>
    <string name="discipline_cases_q_1">I need help on how to view disciplinary cases of a specific student.</string>
    <string name="view_attendance_q_1">I need help on how to view attendance history of a specific student.</string>
    <string name="fleet_servicing_q_1">I need help on how to record servicing details of the school vehicle.</string>
    <string name="daily_transport_q_1">I need help on how to capture the barcode from the pupils/students card on Daily transport</string>
    <string name="trip_tranport_q_1">I need help on how to activate the MziziApp to track the bus on a School trip.</string>
    <string name="disciplinary_case_q_1">I need help on how to record student/pupil indiscipline case.</string>
    <string name="dutyroster_q_1">I need help on how to view the Duty Roster.</string>
    <string name="duty_step_1">On the staff section, tap on the \"Duty Roster\" where you will get the details of the staff member who\'s on duty.</string>
    <string name="duty_step_2">Tap on the highlighted section in blue, to make a call to the number displayed.</string>
    <string name="duty_step_1_img_1">duty_step_1_img_1</string>
    <string name="duty_step_2_img_2">duty_step_2_img_2</string>
    <string name="consump_step_1">On the fleet section, tap on the "Fuel Consumption" which leads to the fuel consumption page</string>
    <string name="consump_step_2">Select vehicle plate.</string>
    <string name="consump_step_3">Specify the \"Quantity(litres)\", \"Mileage at fueling\", \"Price per litre\", and Pick the date the vehicle was fueled.</string>
    <string name="consump_step_4">After all fields are filled, tap the save button to save your records.Incase of any errors follow the instructions in red or repeat the steps.</string>
    <string name="consump_step_5">Please check if the record was saved successfully. In case of an error repeat the previous steps.</string>
    <string name="consump_step_1_img_1">consump_step_1_img_1</string>
    <string name="consump_step_2_img_2">consump_step_2_img_2</string>
    <string name="consump_step_3_img_3">consump_step_3_img_3</string>
    <string name="consump_step_4_img_4">consump_step_4_img_4</string>
    <string name="consump_step_5_img_5">consump_step_5_img_5</string>
    <string name="disci_step_1">On the Student section, tap on the \"Disciplanary Case\".</string>
    <string name="disci_step_2">Select the class stream to filter the students according to class, in order to select a student and record an indiscipline case.</string>
    <string name="disci_step_3">Specify the offence and penalty of the disciplinary action for the selected student. </string>
    <string name="disci_step_4">Then tap on the save button, to record the disciplinary action taken for the student.</string>
    <string name="disci_step_5"> Please check if the operation was a success, and if not please follow the instruction in red or repeat the previous steps.</string>
    <string name="disci_step_1_img_1">disci_step_1_img_1</string>
    <string name="disci_step_2_img_2">disci_step_2_img_2</string>
    <string name="disci_step_3_img_3">disci_step_3_img_3</string>
    <string name="disci_step_4_img_4">disci_step_4_img_4</string>
    <string name="disci_step_5_img_5">disci_step_5_img_5</string>
    <string name="at_step_1">On your Mzizi App Home screen, tap on \"Mark Class  Attendance\".Here you can mark, as a Teacher Staff, the classes you are assigned to teach.</string>
    <string name="at_step_2">You just need to select a class session and class stream from the drop downs highlighted in blue above. (You will need to select session then class stream.)</string>
    <string name="at_step_3">then you will have all the students in that class displayed as a list. You can scroll up and down. The class stream drop down list, specifies the classes you teach. Within the list, you will notice all students\' attendance status is marked \"Present\". At this point, you can save the Attendance register if and only if all students are present.</string>
    <string name="at_step_4">You can use the highlighted icons to maximize or minimize the student display list.</string>
    <string name="at_step_5">If not all students are present, mark those absent as absent, and with a reason (if you know of any).</string>
    <string name="at_step_6">If at the moment you dont have a reason, why this student did not  attend class, you are instructed, (the text in red), to hold down the \"Save \" Button to save.</string>
    <string name="at_step_7">If you tap at the \"Save Button\" the highlighted area will show you the student you have not specified reason for. If you tap the save button again it will show the second student without reason for absence. This will be repeated until all students specified absent have reason and then you can save.(By just tapping on the save button.)</string>
    <string name="at_step_8">This records are only sent to your school servers or cloud only when you have access to the internet.(make sure you have access to the internet either via WiFi /data bundles) Make sure that you make any changes to the class register before connecting to the internet. The highlighted above, shows the classes you just marked their class registers. You can tap to make any changes.</string>
    <string name="at_step_9">Check if the records were saved successfully or an error occurred when saving the \"new attendance register\" or \"updating attendance register\".</string>
    <string name="at_step_1_img_1">at_step_1_img_1</string>
    <string name="at_step_2_img_2">at_step_2_img_2</string>
    <string name="at_step_3_img_3">at_step_3_img_3</string>
    <string name="at_step_4_img_4">at_step_4_img_4</string>
    <string name="at_step_5_img_5">at_step_5_img_5</string>
    <string name="at_step_6_img_6">at_step_6_img_6</string>
    <string name="at_step_7_img_7">at_step_7_img_7</string>
    <string name="at_step_8_img_8">at_step_8_img_8</string>
    <string name="at_step_9_img_9">at_step_9_img_9</string>
    <string name="enq_atte_step_1">On the student section, tap on \"Student Enquiry\".</string>
    <string name="enq_atte_step_2">Select the Class Stream and Student Name from the dropdowns highlighted in blue.</string>
    <string name="enq_atte_step_3">You can tap on the actions below, based on what you want to enquire about the student you selected.</string>
    <string name="enq_atte_step_4">Tap on the \"Attendance History\".</string>
    <string name="enq_atte_step_5">Please wait until the Year dropdown loading is complete, found in the next step</string>
    <string name="enq_atte_step_6">Select the year from the dropdown. This automatically enables you to select the term.</string>
    <string name="enq_atte_step_7">Wait for loading to be complete, found in the next step</string>
    <string name="enq_atte_step_8">After loading is complete, you will have the student\'s attendance records displayed as a grid.</string>
    <string name="enq_atte_step_9">You can tap on any grid item, marked present or absent as shown the key above.The dialog highlighted in blue above is displayed.</string>
    <string name="enq_atte_step_1_img_1">enq_atte_step_1_img_1</string>
    <string name="enq_atte_step_2_img_2">enq_atte_step_2_img_2</string>
    <string name="enq_atte_step_3_img_3">enq_atte_step_3_img_3</string>
    <string name="enq_atte_step_4_img_4">enq_atte_step_4_img_4</string>
    <string name="enq_atte_step_5_img_5">enq_atte_step_5_img_5</string>
    <string name="enq_atte_step_6_img_6">enq_atte_step_6_img_6</string>
    <string name="enq_atte_step_7_img_7">enq_atte_step_7_img_7</string>
    <string name="enq_atte_step_8_img_8">enq_atte_step_8_img_8</string>
    <string name="enq_atte_step_9_img_9">enq_atte_step_9_img_9</string>
    <string name="enq_disci_step_1">On the student section, tap on \"Student Enquiry\".</string>
    <string name="enq_disci_step_2">Select the Class Stream and Student Name from the dropdowns highlighted in blue.</string>
    <string name="enq_disci_step_3">You can tap on the actions below, based on what you want to enquire about the student you selected.</string>
    <string name="enq_disci_step_4">Tap on the \"Disciplinary Cases\".</string>
    <string name="enq_disci_step_5">Please wait until the Year dropdown loading is complete, found in the next step</string>
    <string name="enq_disci_step_6">Select the year from the dropdown. This automatically enables you to select the term.</string>
    <string name="enq_disci_step_7">Please wait for loading to be complete, found in the next step</string>
    <string name="enq_disci_step_8">After loading is complete, you will have the student\'s disciplinary cases displayed as a list.</string>
</resources>