<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:keepScreenOn="true"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.TripTransport">


   <ScrollView
       android:id="@+id/scrollview"
       android:layout_marginTop="@dimen/quick_action_size_expand_cardview"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <RelativeLayout
           android:paddingLeft="10dp"
           android:paddingRight="10dp"
           android:paddingBottom="@dimen/activity_vertical_margin"
           android:paddingTop="@dimen/activity_vertical_margin"
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <LinearLayout
               android:layout_marginStart="10dp"
               android:layout_width="wrap_content"
               android:orientation="horizontal"
               android:id="@+id/image_tap_read"
               android:layout_height="wrap_content"
               android:layout_below="@+id/layout3"
               android:layout_alignParentStart="true">

               <LinearLayout
                   android:orientation="vertical"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">

                   <ImageView
                       android:layout_alignTop="@+id/buttons"
                       android:id="@+id/image_btn_read_text_out_loud_ID"
                       android:src="@drawable/text_speech_icon"
                       android:layout_width="40dp"
                       android:layout_height="40dp" />

                   <TextView
                       android:text="Tap to read"
                       android:textColor="@color/black"
                       android:textSize="10sp"
                       android:id="@+id/txt_read_loud_ID"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />

               </LinearLayout>

               <LinearLayout
                   android:id="@+id/ll_last_known_location_ID"
                   android:visibility="invisible"
                   android:layout_marginStart="5dp"
                   android:background="@drawable/spinner_background_green_line"
                   android:layout_marginTop="5dp"
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <TextView
                       android:layout_marginTop="2dp"
                       android:textSize="13sp"
                       android:textStyle="bold"
                       android:textColor="@color/colorAccent"
                       android:gravity="center_horizontal"
                       android:text="Last known location"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" />

                   <RelativeLayout
                       android:layout_marginTop="2dp"
                       android:orientation="horizontal"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       >
                       <TextView
                           android:layout_marginStart="20dp"
                           android:layout_alignParentStart="true"
                           android:layout_marginEnd="10dp"
                           android:text="Location"
                           android:textSize="13sp"
                           android:textStyle="bold"
                           android:textColor="@color/black"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content" />
                       <TextView
                           android:textSize="13sp"
                           android:textStyle="bold"
                           android:textColor="@color/black"
                           android:layout_marginEnd="20dp"
                           android:layout_alignParentEnd="true"
                           android:text="Time"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content" />

                   </RelativeLayout>

                   <RelativeLayout
                       android:padding="3dp"
                       android:layout_marginTop="0dp"
                       android:orientation="horizontal"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">
                       <TextView
                           android:id="@+id/txt_last_location_latlong_ID"
                           android:layout_marginStart="10dp"
                           android:textSize="12sp"
                           android:textColor="@color/black"
                           android:layout_alignParentStart="true"
                           android:layout_marginEnd="10dp"
                           android:text=""
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content" />
                       <TextView
                           android:id="@+id/txt_last_location_time_ID"
                           android:textColor="@color/black"
                           android:textSize="12sp"
                           android:layout_alignParentEnd="true"
                           android:text=""
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content" />

                   </RelativeLayout>



               </LinearLayout>



           </LinearLayout>




           <ImageView
               android:layout_marginTop="2dp"
               android:id="@+id/info_icon_id"
               android:layout_centerHorizontal="true"
               android:src="@drawable/more_info_icon"
               android:layout_width="20dp"
               android:layout_height="20dp" />




           <RelativeLayout
               android:layout_marginTop="10dp"
               android:layout_below="@+id/info_icon_id"
               android:id="@+id/ll_layout"
               android:orientation="horizontal"

               android:layout_width="match_parent"
               android:layout_height="wrap_content">


               <TextView
                   android:layout_marginEnd="0dp"
                   android:layout_centerHorizontal="true"
                   android:gravity="center_horizontal"
                   android:layout_centerInParent="true"
                   android:textColor="@color/black"
                   android:text="@string/start_trip_instructions"
                   android:id="@+id/txt_ID"
                   android:textSize="12sp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />


           </RelativeLayout>
           <RelativeLayout
               android:layout_marginTop="5dp"
               android:layout_below="@+id/ll_layout"
               android:orientation="horizontal"
               android:id="@+id/layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">


               <TextView
                   android:layout_marginEnd="0dp"
                   android:layout_centerHorizontal="true"
                   android:gravity="center_horizontal"
                   android:layout_centerInParent="true"
                   android:textColor="@color/black"
                   android:text="@string/end_trip_instructions"
                   android:textSize="12sp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />




           </RelativeLayout>

           <RelativeLayout
               android:layout_marginTop="5dp"
               android:layout_below="@+id/layout"
               android:orientation="horizontal"
               android:id="@+id/layout2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">


               <TextView
                   android:layout_marginEnd="0dp"
                   android:layout_centerHorizontal="true"
                   android:gravity="center_horizontal"
                   android:layout_centerInParent="true"
                   android:textColor="@color/black"
                   android:text="@string/how_to_use_app"
                   android:textSize="12sp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />




           </RelativeLayout>
           <RelativeLayout
               android:visibility="gone"
               android:layout_marginTop="5dp"
               android:layout_below="@+id/layout2"
               android:orientation="horizontal"
               android:id="@+id/layout3"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">


               <TextView
                   android:layout_marginEnd="0dp"
                   android:layout_centerHorizontal="true"
                   android:gravity="center_horizontal"
                   android:layout_centerInParent="true"
                   android:textColor="@color/black"
                   android:text="@string/inform_for_notification"
                   android:textSize="12sp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />




           </RelativeLayout>



           <RelativeLayout

               android:layout_below="@+id/view_ID"
               android:id="@+id/txt_lat_long_ID_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <TextView
                   android:visibility="visible"
                   android:layout_centerHorizontal="true"
                   android:textColor="@color/black"
                   android:text="Please select an action"
                   android:id="@+id/txt_lat_long_ID"
                   android:textSize="15sp"
                   android:textStyle="bold"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
               <LinearLayout
                   android:visibility="gone"
                   android:id="@+id/ll_gps_on"
                   android:layout_centerHorizontal="true"
                   android:orientation="horizontal"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
                   <ImageView
                       android:src="@drawable/gps_icon"
                       android:layout_width="25dp"
                       android:layout_height="25dp" />
                   <TextView
                       android:layout_marginTop="8dp"
                       android:textSize="12sp"
                       android:textColor="@color/black"
                       android:text="GPS tracking active"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content" />
               </LinearLayout>

           </RelativeLayout>



           <View
               android:id="@+id/thin_line_ID"
               android:layout_marginTop="5dp"
               android:layout_marginBottom="5dp"
               android:layout_below="@+id/txt_lat_long_ID_layout"
               android:gravity="center_horizontal|center_vertical"
               android:background="@android:color/black"
               android:layout_width="match_parent"
               android:layout_height="1dp" />

           <LinearLayout
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"
               android:layout_marginTop="5dp"
               android:id="@+id/layout_top_of_buttons"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_below="@+id/thin_line_ID"
               android:weightSum="2"
               android:gravity="center">

               <TextView
                   android:text="Vehicle Plate Number"
                   android:textColor="@color/dark_blue"
                   android:layout_marginBottom="5dp"
                   android:textSize="15sp"
                   android:textStyle="bold"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

               <RelativeLayout
                   android:layout_marginLeft="30dp"
                   android:layout_width="wrap_content"
                   android:layout_height="40dp"
                   android:background="@drawable/spinner_background"
                   android:orientation="horizontal"
                   android:layout_marginRight="30dp">

                   <Spinner

                       android:id="@+id/sp_vehicle_plate_number_ID"
                       android:layout_width="match_parent"
                       android:layout_marginRight="25dp"
                       android:layout_height="wrap_content"
                       android:spinnerMode="dropdown"
                       android:background="@android:color/transparent"
                       android:layout_centerVertical="true"
                       android:layout_gravity="center"
                       android:gravity="center"
                       android:layout_marginLeft="5dp"
                       />

                   <ImageView
                       android:id="@+id/image_vehicle_plate_number_ID"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="0.5"
                       android:src="@drawable/spinner_dropdown_icon"
                       android:layout_alignParentRight="true"
                       android:layout_centerVertical="true"
                       android:layout_gravity="center"
                       />

               </RelativeLayout>


           </LinearLayout>




           <LinearLayout
               android:layout_below="@+id/layout_top_of_buttons"
               android:id="@+id/buttons"
               android:layout_marginBottom="5dp"
               android:layout_alignParentBottom="false"
               android:layout_width="match_parent"
               android:orientation="horizontal"
               android:weightSum="2"
               android:layout_height="wrap_content">

               <Button
                   android:id="@+id/requestLocationUpdatesButton"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/layout_top_of_buttons"
                   android:layout_marginLeft="5dp"
                   android:layout_marginTop="10dp"
                   android:background="@drawable/round_board"
                   android:padding="15dp"
                   android:text="@string/start_trip_journey"
                   android:textColor="@color/white"
                   android:textSize="10sp"
                   android:textStyle="bold"/>

               <Button
                   android:id="@+id/stopLocationUpdatesButton"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"
                   android:layout_below="@+id/layout_top_of_buttons"
                   android:layout_marginLeft="10dp"
                   android:textColor="@color/white"
                   android:layout_marginTop="10dp"
                   android:background="@drawable/round_board"
                   android:padding="15dp"
                   android:text="@string/end_trip_journey"
                   android:textSize="10sp"
                   android:textStyle="bold"/>
           </LinearLayout>

           <RelativeLayout
               android:id="@+id/text_layout"
               android:layout_below="@id/buttons"
               android:layout_marginTop="5dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <TextView
                   android:visibility="visible"
                   android:id="@+id/lable_message_ID"
                   android:textSize="15sp"
                   android:text="Select vehicle plate"
                   android:gravity="center_horizontal"
                   android:textColor="@android:color/holo_red_light"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" />


               <TextView
                   android:visibility="invisible"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center_horizontal"
                   android:textSize="15sp"
                   android:textStyle="bold"
                   android:text="GPS activated and tracking the bus in progress"
                   android:textColor="#1641EE"
                   android:id="@+id/gps_report_info_ID"/>

           </RelativeLayout>



           <View
               android:layout_marginTop="10dp"
               android:layout_below="@+id/image_tap_read"
               android:id="@+id/view_ID"
               android:gravity="center_horizontal|center_vertical"
               android:background="@color/white"
               android:layout_width="match_parent"
               android:layout_height="10dp" />

           <View
               android:id="@+id/bottom_line"
               android:layout_marginTop="5dp"
               android:layout_below="@+id/text_layout"
               android:gravity="center_horizontal|center_vertical"
               android:background="@color/white"
               android:layout_width="match_parent"
               android:layout_height="10dp" />


       </RelativeLayout>

   </ScrollView>

    <include layout="@layout/quick_actions_layout"/>

</RelativeLayout>